Added ability to add icons to modal suggest options

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,8 @@ div.side-dock-ribbon-action[aria-label*="Reminder"] {
     position: relative;
     left: -1px;
 }
+div.prompt-results > div.suggestion-item > span.modal-icon {
+    position: absolute;
+    left: 10px;
+    top: 7px;
+}
