Created InputModal class for a regular input text box and created a ReminderNotice class for Obsidian notice notification

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,7 @@ div.prompt-results > div.suggestion-item > span.modal-icon {
     left: 10px;
     top: 7px;
 }
+body > div.modal-container.reminder-input-modal input {
+    width: 30vw;
+    margin-right: 20px;
+}
