--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,20 @@ div.side-dock-ribbon-action[aria-label*="Reminder"] {
     position: relative;
     left: -1px;
 }
-
-div.prompt-results>div.suggestion-item>span.modal-icon {
+div.prompt-results > div.suggestion-item > span.modal-icon {
     position: absolute;
     left: 10px;
     top: 7px;
 }
-
-body>div.modal-container.reminder-input-modal input {
+body > div.modal-container.reminder-input-modal input {
     width: 30vw;
     margin-right: 20px;
+}
+
+div.view-content.rem-notifications-view,
+div.view-content.rem-notifications-view .nav-header {
+    padding-top: 0px;
+}
+div.view-content.rem-notifications-view .main > h2 {
+    padding-left: 10px;
 }
