- Added collapsed prop to the Reminder object type to track state of UI expand/collapse - Added button and function for deleting reminders: reminderDelete() - Added function to set properties of reminders on the fly: reminderSetPropById()

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,15 +12,20 @@ body > div.modal-container.reminder-input-modal input {
     margin-right: 20px;
 }
 
+/*
 div.view-content.rem-notifications-view,
 div.view-content.rem-notifications-view .nav-header {
     padding-top: 0px;
 }
+*/
 div.view-content.rem-notifications-view .main > h2 {
     padding-left: 10px;
 }
 
-div.view-content.rem-notifications-view .icon-container {
+div.view-content.rem-notifications-view .tree-item.search-result.is-collapsed .search-result-file-matches {
+    display: none;
+}
+div.view-content.rem-notifications-view .search-result-file-match .icon-container {
     padding-right: 10px;
     position: relative;
     top: 2px;
@@ -28,4 +33,15 @@ div.view-content.rem-notifications-view .icon-container {
 div.view-content.rem-notifications-view .tree-item-flair.expiring-soon {
     background-color: var(--interactive-accent);
     color: var(--text-normal);
+}
+
+div.view-content.rem-notifications-view .tree-item-delete.icon-container {
+    padding-left: 10px;
+    position: relative;
+    top: 2px;
+}
+
+div.notice-container div.notice.reminder-notice {
+    max-width: 25vw;
+    cursor: unset;
 }
